Support loading images from InputStream as a common decoding mechanism
Agent-Logs-Url: https://github.com/crramirez/casciian/sessions/b3e301bb-1fa8-4853-acdc-b1fc7ab05c55

Co-authored-by: crramirez <8397379+crramirez@users.noreply.github.com>