@@ -20,10 +20,10 @@ import casciian.bits.ArrayImageRGB;
 import casciian.image.decoders.ImageDecoder;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.util.List;
 
 /**
  * Image decoder for 24-bit BMP (Windows Bitmap) format files.
@@ -32,8 +32,8 @@ import java.nio.file.Path;
 public class BMP24ImageDecoder implements ImageDecoder {
 
     @Override
-    public ImageRGB decode(Path path) throws IOException {
-        byte[] data = Files.readAllBytes(path);
+    public ImageRGB decode(InputStream inputStream, String mimeType) throws IOException {
+        byte[] data = inputStream.readAllBytes();
         ByteBuffer buffer = ByteBuffer.wrap(data);
         buffer.order(ByteOrder.LITTLE_ENDIAN);
 
@@ -96,6 +96,11 @@ public class BMP24ImageDecoder implements ImageDecoder {
         }
 
         return image;
+    }
+
+    @Override
+    public List<String> getSupportedMimeTypes() {
+        return List.of("image/bmp");
     }
 
     @Override
